--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,5 @@
 [Setup]
+Name = EDECOA Sinemate 5-151B
 Inverter_Position = 1
 
 [MQTTBroker]
@@ -6,5 +7,10 @@ address = 192.168.0.247
 port = 1883
 name = MQTT_to_Inverter
 
+[Warnings]
+HighTemperature = 65
+Overload = 1500
+
 [Topics]
 L1 = tele/tasmota_4B0B98/SENSOR
+CONFIG = tele/tasmota_4B0B98/STATE
