--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,6 @@
 [Setup]
 Name = EDECOA Sinemate 5-151B
+Serial = E19221915BXEU0V52450010K
 TasmotaIp = 192.168.0.235
 debug = false
 
@@ -11,6 +12,7 @@ name = MQTT_to_Inverter
 [Warnings]
 HighTemperature = 65
 Overload = 1500
+LowVoltage = 11.8
 
 [Topics]
 L1 = tele/tasmota_4B0B98/SENSOR
