write config file from victron connect app

--- a/config.ini
+++ b/config.ini
@@ -14,6 +14,8 @@ HighTemperature = 65
 Overload = 1500
 LowVoltage = 11.8
 
+[Options]
+
 [Topics]
 L1 = tele/tasmota_4B0B98/SENSOR
 CONFIG = tele/tasmota_4B0B98/STATE
