update config.ini, refactor utils and add charge status

--- a/config.ini
+++ b/config.ini
@@ -1,24 +1,39 @@
 [Setup]
+; device name
 Name = EDECOA Sinemate 5-151B
+; device serial number
 Serial = E19221915BXEU0V52450010K
+; tasmota plug ip
 TasmotaIp = 192.168.0.235
+; enable debug in logs
 debug = false
 
 [MQTTBroker]
+; ip od the Venus OS broker
 address = 192.168.0.247
+; port of the Venus OS broker
 port = 1883
+; custom name of the venus os bromer
 name = MQTT_to_Inverter
 
 [Warnings]
+; raise an alarm for high temperature
 HighTemperature = 65
+; raise an alarm for overload power
 Overload = 1500
+; raise an alarm for low voltage
 LowVoltage = 11.8
 
 [Options]
+; Tasmota plug will poweroff if this value has been reached
 LowBatteryShutdown = 9.30
+; not used just for visualization
 ChargeDetected = 14.65
 
 [Topics]
+; asmota sensor infor
 L1 = tele/tasmota_4B0B98/SENSOR
+; tasmota plug state
 CONFIG = tele/tasmota_4B0B98/STATE
+; tasmota plug status (Offline/Online)
 LWT = tele/tasmota_4B0B98/LWT
