--- a/config.ini
+++ b/config.ini
@@ -27,8 +27,8 @@ LowVoltage = 11.8
 [Options]
 ; Tasmota plug will poweroff if this value has been reached
 LowBatteryShutdown = 9.30
-; not used just for visualization
-ChargeDetected = 14.65
+; Tasmota will not power on after a low battery shutdown event until the charge detected value has not been reached
+ ChargeDetected = 14.65
 
 [Topics]
 ; asmota sensor infor
