--- a/config.sample.ini
+++ b/config.sample.ini
@@ -1,16 +1,16 @@
 [Setup]
 ; device name
-Name = EDECOA Sinemate 5-151B
+Name = Tasmota Inverter
 ; device serial number
-Serial = E19221915BXEU0V52450010K
+Serial = 000000
 ; tasmota plug ip
-TasmotaIp = 192.168.0.235
+TasmotaIp = 127.0.0.1
 ; enable debug in logs
 debug = false
 
 [MQTTBroker]
 ; ip od the Venus OS broker
-address = 192.168.0.247
+address = 127.0.0.1
 ; port of the Venus OS broker
 port = 1883
 ; custom name of the venus os bromer
