update to version 0.4.0

--- a/config.sample.ini
+++ b/config.sample.ini
@@ -9,11 +9,11 @@ TasmotaIp = 127.0.0.1
 debug = false
 
 [MQTTBroker]
-; ip od the Venus OS broker
+; ip of the Venus OS broker
 address = 127.0.0.1
 ; port of the Venus OS broker
 port = 1883
-; custom name of the venus os bromer
+; custom name of the venus os broker
 name = MQTT_to_Inverter
 
 [Warnings]
@@ -31,7 +31,7 @@ LowBatteryShutdown = 9.30
 ChargeDetected = 14.65
 
 [Topics]
-; asmota sensor infor
+; tasmota sensor info
 L1 = tele/tasmota_4B0B98/SENSOR
 ; tasmota plug state
 CONFIG = tele/tasmota_4B0B98/STATE
