add efficency option

--- a/config.sample.ini
+++ b/config.sample.ini
@@ -37,3 +37,5 @@ LowVoltage = 11.8
 LowBatteryShutdown = 9.30
 ; Tasmota will not power on after a low battery shutdown event until the charge detected value has not been reached
 ChargeDetected = 14.65
+; Inverter efficency percentage. if you do not want to use this set to 100
+Efficency = 92
