use configurable product ids

--- a/config.sample.ini
+++ b/config.sample.ini
@@ -5,6 +5,8 @@ Name = Tasmota Inverter
 Serial = 000000
 ; tasmota plug ip
 TasmotaIp = 127.0.0.1
+productId = 41617
+vrmProductId = 0xA291
 ; enable debug in logs
 debug = false
 
